<resources>
    <string name="app_name">FixMyLinks</string>
    <string name="screen">Screen</string>
    <string name="title_activity_share">Share to…</string>
    <string name="open_share_sheet">Open share sheet</string>

    <string name="home">Home</string>
    <string name="rules">Rules</string>
    <string name="saved">Saved</string>

    <string name="add_new_rule">Add new rule</string>
    <string name="new_rule">New rule</string>
    <string name="navigate_up">Navigate up</string>
    <string name="select_rule_type">Select rule type</string>

    <string name="radio_option_content_description">%1$s option</string>

    <!-- mt = mutation type -->
    <string name="mt_domain_name">Change domain name</string>
    <string name="mt_domain_name_present_simple_tense">Changes the given domain name</string>
    <string name="mt_domain_name_desc">Modify the domain name and keep the rest of the link the same</string>

    <string name="mt_url_params_all">Remove all URL parameters</string>
    <string name="mt_url_params_all_present_simple_tense">Removes all URL parameters</string>
    <string name="mt_url_params_all_desc">Strip every parameter out of the link</string>

    <string name="mt_url_params_specific">Remove specific URL parameters</string>
    <string name="mt_url_params_specific_present_simple_tense">Removes specific URL parameters</string>
    <string name="mt_url_params_specific_desc">Only remove certain parameters from the link</string>

    <string name="mt_domain_name_and_url_params_all">Change domain name and remove all URL parameters</string>
    <string name="mt_domain_name_and_url_params_all_present_simple_tense">Changes the given domain name and removes all URL parameters</string>
    <string name="mt_domain_name_and_url_params_all_desc">Modify the domain name and strip every parameter out of the link</string>

    <string name="empty" />
    <string name="next">Next</string>
    <string name="enable">Enable</string>

    <string name="rule_name_is_optional_supporting_text">
        Optional. We\'ll generate a descriptive name for you if you don\'t provide one.
    </string>
    <string name="rule_name">Rule name</string>
    <string name="initial_domain_name">Initial domain name</string>
    <string name="initial_domain_supporting_text">The domain name of the link that should be changed.\nE.g., <b>x.com</b></string>
    <string name="target_domain_name">Target domain name</string>
    <string name="target_domain_supporting_text">The domain name that should replace the original one.\nE.g., <b>twitter.com</b></string>
    <string name="save">Save</string>
    <string name="enable_rule_supporting_text">Start applying this rule now</string>
    <string name="backup_to_cloud">Backup to cloud</string>
    <string name="backup_to_cloud_supporting_text">Sync rule across signed-in devices</string>
    <string name="content_description_more_options">More options</string>
    <string name="show_hints">Show hints</string>
    <string name="domain_name">Domain name</string>
    <string name="domain_name_supporting_text">The domain name that this rule applies to.</string>
    <string name="delete">Delete</string>
    <string name="url_parameter_name">URL parameter name</string>
    <string name="domain_name_blank_error">Domain name can\'t be blank</string>
    <string name="invalid_domain_name">That doesn\'t look like a valid domain name</string>
    <string name="parameter_name_blank_error">Parameter name can\'t be blank</string>
    <string name="invalid_parameter_name">That doesn\'t look like a valid URL parameter name</string>
    <string name="add_at_least_one_param_name">Add at least one URL parameter name</string>
    <string name="rule_details">Rule details</string>
    <string name="edit">Edit</string>
    <string name="search_rules">Search rules</string>
    <string name="account_and_settings">Account and settings</string>
    <string name="no_rules_added_yet">No rules added yet</string>
    <string name="backed_up">Backed up</string>
    <string name="not_backed_up">Not backed up</string>
    <string name="collapse_details">Collapse details</string>
    <string name="expand_details">Expand details</string>
    <string name="content_desc_rule_name">Rule name</string>
    <string name="content_desc_domain_name">Domain name</string>
    <string name="content_desc_backup_off">Backup off</string>
    <string name="content_desc_backup_on">Backup on</string>
    <string name="content_desc_last_modified">Last modified</string>
    <string name="keep_content">Keep content</string>
    <string name="keep_content_supporting_text">Retain the original shared content</string>
    <string name="delete_all_rules">Delete all rules</string>
    <string name="select_all">Select all</string>
    <string name="delete_selected_rules">Delete selected rules</string>
    <string name="delete_selected_rules_description">Are you sure you want to delete the selected rules? This action can\'t be undone.</string>

    <!-- format: "{rule type} on {trigger domain}. {present simple tense rule desc}." -->
    <string name="cd_rules_list_item">%1$s on %2$s. %3$s.</string>

    <string name="cd_add_wildcard_operator">Add wildcard operator</string>
    <string name="active_rules">Active rules</string>
    <string name="inactive_rules">Inactive rules</string>
    <string name="rule_enabled_switch_title">Apply this rule</string>
    <string name="custom">Custom</string>
    <string name="built_in">Built-in</string>
</resources>