...
    Column(
        modifier = modifier
            .fillMaxSize()
            .verticalScroll(rememberScrollState())
            .padding(horizontal = 8.dp)
            .padding(top = 16.dp)
            .semantics { contentDescription = "Select Rule Type Screen" },
        verticalArrangement = Arrangement.SpaceBetween
    ) {
        RuleTypeRadioGroup(
            options = radioOptions,
            selectedState = selectedOption,
            onSelectionChanged = onSelectedMutationTypeChanged,
...
